Add in html for the showcase section of the webpage. This section contains the header elements inlcuding the h1 and a button. It also contains two divs that will go under the header.First div will contain the information while the second div will hold the image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <title>Huddle Landing Page</title>
 </head>
 <body>
+    <section id="showcase">
+        <div class="container">
+            <header>
+                <div class="container">
+                    <div id="logo">
+                        <h1>Huddle</h1>
+                    </div>
+                    <button>Try It Free</button>
+                </div>
+            </header>
+
+            <div id="showcase-info">
+                <h2>Build The Community Your Fans Will Love</h2>
+                <p>Huddle re-imagines teh way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+                <button>Get Started For Free</button>
+            </div>
+            <div id="showcase-image">
+                <img src="" alt="">
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
