Add in footer element for the web page. Footer element contians four divs each containing information and links for the webpage

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Huddle Landing Page</title>
 </head>
 <body>
+    <!-- Showcase -->
     <section id="showcase">
         <div class="container">
             <header>
@@ -29,6 +30,7 @@
         </div>
     </section>
 
+    <!-- Body -->
     <section id="main">
         <div class="container">
             <div id="grow">
@@ -58,5 +60,32 @@
         </div>
     </section>
     
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div id="footer-left">
+                <h1>Huddle</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi deserunt excepturi odio, illum repudiandae labore provident itaque doloribus corporis.</p>
+                <p>+1-543-123-4567</p>
+                <p>example@huddle.com</p>
+            </div>
+
+            <div id="footer-middle-a">
+                <a href="">About Us</a>
+                <a href="">What We Do</a>
+                <a href="">FAQ</a>
+            </div>
+            
+            <div id="footer-middle-b">
+                <a href="">Career</a>
+                <a href="">Blog</a>
+                <a href="">Contact Us</a>
+            </div>
+
+            <div id="footer-right">
+                <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
