--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
     <title>Huddle Landing Page</title>
 </head>
 <body>
@@ -75,7 +76,7 @@
                 <a href="">What We Do</a>
                 <a href="">FAQ</a>
             </div>
-            
+
             <div id="footer-middle-b">
                 <a href="">Career</a>
                 <a href="">Blog</a>
