Change the h1 of the header element to an image for the website logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <header>
                 <div class="container">
                     <div id="logo">
-                        <h1>Huddle</h1>
+                        <img src="/images/logo.svg" alt="website logo">
                     </div>
                     <button>Try It Free</button>
                 </div>
