--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <button>Get Started For Free</button>
             </div>
             <div id="showcase-image">
-                <img src="" alt="">
+                <img src="images/illustration-mockups.svg" alt="image for the showcase section">
             </div>
         </div>
     </section>
