--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <section id="showcase">
         <div class="container">
             <header>
-                <div class="container">
-                    <div id="logo">
+                <div id="logo" class="container">
+                    <div>
                         <img src="/images/logo.svg" alt="website logo">
                     </div>
                     <button>Try It Free</button>
