--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,600&display=swap" rel="stylesheet">
     <title>Huddle Landing Page</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
             </header>
 
             <div id="showcase-info">
-                <h2>Build The Community Your Fans Will Love</h2>
+                <h1>Build The Community Your Fans Will Love</h1>
                 <p>Huddle re-imagines teh way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
                 <button>Get Started For Free</button>
             </div>
