--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
     <!-- Body -->
     <section id="main">
         <div class="container">
-            <div id="grow">
+            <div class="body-div" id="grow">
                 <h2>Grow Together</h2>
                 <p>Generate meaninful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
                 <img src="" alt="">
             </div>
 
-            <div id="flow">
+            <div class="body-div" id="flow">
                 <img src="" alt="">
                 <h2>Flowing Conversations</h2>
                 <p>You wouldn't paginate a conversation in real life, so why do it online Our threads have just-in-time loading for a more natural flow.</p>
             </div>
 
-            <div id="users">
+            <div class="body-div" id="users">
                 <h2>Your Users</h2>
                 <p>It takes no time at all to intergrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
                 <img src="" alt="">
