Remove the div holding the h2 and p element. Remove the div holding the image element in the grow div

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <section id="main">
         <div class="container">
             <div class="body-div" id="grow">
-                <h2>Grow Together</h2>
-                <p>Generate meaninful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
-                <img src="" alt="">
+                    <h2>Grow Together</h2>
+                    <p>Generate meaninful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
+                    <img src="images/illustration-grow-together.svg" alt="cartoon image">
             </div>
 
             <div class="body-div" id="flow">
