Change the class attribute of the main section child div from container to container-2 class. Add in image for the flow div

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- Body -->
     <section id="main">
-        <div class="container">
+        <div class="container-2">
             <div class="body-div" id="grow">
                     <h2>Grow Together</h2>
                     <p>Generate meaninful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
@@ -43,7 +43,7 @@
             </div>
 
             <div class="body-div" id="flow">
-                <img src="" alt="">
+                <img src="images/illustration-flowing-conversation.svg" alt="cartoon picture of people having a conversation">
                 <h2>Flowing Conversations</h2>
                 <p>You wouldn't paginate a conversation in real life, so why do it online Our threads have just-in-time loading for a more natural flow.</p>
             </div>
