Add in image to the users div

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="body-div" id="users">
                 <h2>Your Users</h2>
                 <p>It takes no time at all to intergrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
-                <img src="" alt="">
+                <img src="images/illustration-your-users.svg" alt="cartoon image of people">
             </div>
         </div>
 
