--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <div id="showcase-info">
                 <h1>Build The Community Your Fans Will Love</h1>
-                <p>Huddle re-imagines teh way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+                <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
                 <button>Get Started For Free</button>
             </div>
             <div id="showcase-image">
