Change the h1 element in the left footer div into an image for the website logo

--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
     <footer>
         <div class="container">
             <div id="footer-left">
-                <h1>Huddle</h1>
+                <div>
+                    <img src="/images/logo.svg" alt="website logo">
+                </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi deserunt excepturi odio, illum repudiandae labore provident itaque doloribus corporis.</p>
                 <p>+1-543-123-4567</p>
                 <p>example@huddle.com</p>
