Add in script link to fontawesome to use icons. Add a new div inside footer element called spans to hold icons. Add in line breaks between the paragraph elements

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/976bb2d67b.js" crossorigin="anonymous"></script>
     <title>Huddle Landing Page</title>
 </head>
 <body>
@@ -70,9 +71,20 @@
                 <div>
                     <img src="/images/logo.svg" alt="website logo">
                 </div>
+
+                <div id="spans">
+                    <span><i class="fas fa-map-marker-alt"></i></span>
+
+                    <span><i class="fas fa-phone-volume"></i></span>
+
+                    <span><i class="fas fa-envelope"></i></span>
+                </div>
+
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi deserunt excepturi odio, illum repudiandae labore provident itaque doloribus corporis.</p>
+                <br>
                 <p>+1-543-123-4567</p>
-                <p>example@huddle.com</p>
+                <br>
+                <p><example@huddle.com</p>
             </div>
 
             <div id="footer-middle-a">
