Create a new div to put the paragraph elements in the footer section inside. Remove the line break elements between each paragraph element

--- a/index.html
+++ b/index.html
@@ -80,11 +80,12 @@
                     <span><i class="fas fa-envelope"></i></span>
                 </div>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi deserunt excepturi odio, illum repudiandae labore provident itaque doloribus corporis.</p>
-                <br>
-                <p>+1-543-123-4567</p>
-                <br>
-                <p><example@huddle.com</p>
+                <div id="paragraphs">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    <p>+1-543-123-4567</p>
+                    <p>example@huddle.com</p>
+                </div>
+                
             </div>
 
             <div id="footer-middle-a">
