In the footer-middle-b div, create a ul with three li elements. Move the a tags into the li element

--- a/index.html
+++ b/index.html
@@ -99,9 +99,11 @@
                 </div>
     
                 <div id="footer-middle-b">
-                    <a href="">Career</a>
-                    <a href="">Blog</a>
-                    <a href="">Contact Us</a>
+                    <ul>
+                        <li><a href="">Career</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">Contact Us</a></li>
+                    </ul>
                 </div>
             </div>
             
