--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
             
 
             <div id="footer-right">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
                 <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
             </div>
         </div>
