Change the spans in the footer section span div into images

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
                 </div>
 
                 <div id="spans">
-                    <span><i class="fas fa-map-marker-alt"></i></span>
+                    <img src="/images/icon-location.svg" alt="icon image of a map pointer">
 
-                    <span><i class="fas fa-phone-volume"></i></span>
+                    <img src="/images/icon-phone.svg" alt="icon image of a phone">
 
-                    <span><i class="fas fa-envelope"></i></span>
+                    <img src="/images/icon-email.svg" alt="icon image of an email">
                 </div>
 
                 <div id="paragraphs">
