Give an id attribute to the first image of the footer-left div

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="container">
             <div id="footer-left">
                 <div>
-                    <img src="/images/logo.svg" alt="website logo">
+                    <img id="footer-logo" src="/images/logo.svg" alt="website logo">
                 </div>
 
                 <div id="spans">
