Add id attributes to all three images inside the spans div

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
                 </div>
 
                 <div id="spans">
-                    <img src="/images/icon-location.svg" alt="icon image of a map pointer">
+                    <img id="img1" src="/images/icon-location.svg" alt="icon image of a map pointer">
 
-                    <img src="/images/icon-phone.svg" alt="icon image of a phone">
+                    <img id="img2" src="/images/icon-phone.svg" alt="icon image of a phone">
 
-                    <img src="/images/icon-email.svg" alt="icon image of an email">
+                    <img id="img3" src="/images/icon-email.svg" alt="icon image of an email">
                 </div>
 
                 <div id="paragraphs">
