Give the first icon element an id attribute of icon-1

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
             
 
             <div id="footer-right">
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-instagram"></i>
+                <i id="icon-1" class="fab fa-facebook-f fa-sm"></i>
+                <i class="fab fa-twitter fa-sm"></i>
+                <i class="fab fa-instagram fa-sm"></i>
                 <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
             </div>
         </div>
