--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
                 <img src="images/illustration-your-users.svg" alt="cartoon image of people">
             </div>
         </div>
+    </section>
 
+    <section id="overlap">
         <div class="container">
             <div id="get-started">
-                <h1>Ready to Build Your Community?</h1>
+                <h1>Ready To Build Your Community?</h1>
                 <button>Get Started For Free</button>
             </div>
         </div>
