Fix source attribute not linking to images correctly

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <header>
                 <div id="logo" class="container">
                     <div>
-                        <img src="/images/logo.svg" alt="website logo">
+                        <img src="images/logo.svg" alt="website logo">
                     </div>
                     <button>Try It Free</button>
                 </div>
@@ -71,15 +71,15 @@
         <div class="container">
             <div id="footer-left">
                 <div>
-                    <img id="footer-logo" src="/images/logo.svg" alt="website logo">
+                    <img id="footer-logo" src="images/logo.svg" alt="website logo">
                 </div>
 
                 <div id="spans">
-                    <img id="img1" src="/images/icon-location.svg" alt="icon image of a map pointer">
+                    <img id="img1" src="images/icon-location.svg" alt="icon image of a map pointer">
 
-                    <img id="img2" src="/images/icon-phone.svg" alt="icon image of a phone">
+                    <img id="img2" src="images/icon-phone.svg" alt="icon image of a phone">
 
-                    <img id="img3" src="/images/icon-email.svg" alt="icon image of an email">
+                    <img id="img3" src="images/icon-email.svg" alt="icon image of an email">
                 </div>
 
                 <div id="paragraphs">
